Add Features: Product, My Account pages
- Product Add/Edit
- Profile Page
- Mobile app design

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "formik": "^1.5.1",
     "moment": "2.22.2",
     "mousetrap": "^1.6.3",
+    "prop-types": "^15.7.2",
     "rc-slider": "^8.6.1",
     "rc-switch": "^1.6.0",
     "react": "^16.9.0",
@@ -20,11 +21,13 @@
     "react-big-calendar": "^0.23.0",
     "react-chartjs-2": "^2.7.4",
     "react-circular-progressbar": "^2.0.2",
+    "react-color": "^2.18.1",
     "react-contextmenu": "^2.9.4",
     "react-datepicker": "^1.5.0",
     "react-dom": "^16.8.6",
     "react-dropzone-component": "^3.2.0",
     "react-image-lightbox": "^5.1.0",
+    "react-images-upload": "^1.2.8",
     "react-intl": "2.4.0",
     "react-lines-ellipsis": "^0.14.1",
     "react-perfect-scrollbar": "^1.1.1",
@@ -38,6 +41,7 @@
     "react-table": "6.10.3",
     "react-tagsinput": "^3.19.0",
     "react-transition-group": "^4.2.2",
+    "reactcss": "^1.2.3",
     "reactstrap": "^8.0.1",
     "redux": "^4.0.1",
     "redux-saga": "^1.0.2",
